Corrected image alignment

--- a/src/public/scaffolding/index.css
+++ b/src/public/scaffolding/index.css
@@ -254,4 +254,8 @@ figure {
 .aligncenter {
 	margin-left: auto;
 	margin-right: auto;
+
+	img& {
+		display: block;
+	}
 }
